syntax = "proto3";

package user;

service UserService {
  rpc getById(UserId) returns (User) {}
}

message UserId {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string fullname = 2;
  string email = 3;
}
